@@ -38,5 +38,6 @@ void doSearchPrefs(GtkWidget* widget,gpointer data);
 void saveSession(GtkWidget* widget,gpointer data);
 void restoreSession(GtkWidget* widget,gpointer data);
 void printFile(GtkWidget* widget,gpointer data);
+void fileChangedOnDisk(GFileMonitor *monitor,GFile *file,GFile *other_file,GFileMonitorEvent event_type,gpointer user_data);
 
 #endif
